# stable_diffusion_optimized

./: .gitignore  README.md  modal_infer.sh  modal_inference.py  modal_volume.py  play.sh  plug_and_play.sh  pyproject.toml
naive/sd/: attention.py  clip.py  ddpm.py  decoder.py  demo.ipynb  diffusion.py  encoder.py  inference.py  model_loader.py  pipeline.py
